--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "sass": "^1.83.1",
+    "swiper": "^11.2.0",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
