--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/media-query": "^3.3.0",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.0",
     "sass": "^1.83.1",
     "swiper": "^11.2.0",
     "tailwind-styled-components": "^2.2.0"
